# orchestrator-core

./: .env.example  .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt
projects/_template/: context.md
projects/aoproof/: context.md
scripts/: install.sh
src/dev_team_orchestrator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/dto/: cli.py
src/dto/core/: contracts.py  orchestrator.py
src/dto/core/llm/: base.py  fake.py  openaiCompat.py
src/dto/core/plugins/: registry.py
src/dto/core/plugins/devteam/: __init__.py  architect.py  backendDev.py  consolidator.py  qa.py
src/dto/core/storage/: base.py  jsonStore.py
src/dto/plugins/devteam/: architect.py  backendDev.py  consolidator.py  qa.py
src/orchestrator/: cli.py
src/orchestrator/core/: contracts.py  orchestrator.py
src/orchestrator/core/llm/: base.py  factory.py  fake.py  ollama.py  openaiCompat.py
src/orchestrator/core/plugins/: registry.py
src/orchestrator/core/plugins/devteam/: __init__.py  architect.py  backendDev.py  consolidator.py  qa.py
src/orchestrator/core/storage/: base.py  jsonStore.py
src/orchestrator/plugins/devteam/: architect.py  backendDev.py  consolidator.py  prompt.py  qa.py
src/orchestrator/teams/: __init__.py  base.py  registry.py
src/orchestrator/teams/dev/: team.py
src/orchestrator/teams/marketing/: team.py
tests/: test_cli_marketing.py  test_ollama_smoke.py  test_pipeline_fake.py
